# WaterSimulator

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README  README.md  dpd.cpp  main.cpp  physics.cpp
include/: dpd.h  particle.h  particle.hpp  physics.h  vector.h
kernels/: cpuloadkernel.cu  cpuloadkernel.h  generickernel.cu  naive.cu  naive.h  optimized.cu  optimized.h  testkernel.cu  testkernel.h
shader/: shaderpixel.fs  shaderpixel.fsh
util/: opengl_interface.cpp  opengl_interface.h  physics.cu  physics.h  vector_tools.cu  vector_tools.h
